fix(ledger): correct test data calculation and date range errors
Fix calculation errors in ledger test expected outputs:

- Add explicit Netflix amount (¥50) to mock memory

- Fix Food category totals (¥895 for all transactions, ¥870 for weekly)

- Fix Transport totals (¥40 for weekly, excluding Feb 9)

- Fix weekly report date range (Feb 2-8 should not include Feb 9)

- Update totals: monthly ¥3510, weekly ¥3483

- Reorder Recent Activity reverse chronological

- Recalculate budget percentages and net balances

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/tests/ledger/expected-output/weekly/2026-W06.md
+++ b/tests/ledger/expected-output/weekly/2026-W06.md
@@ -42,9 +42,9 @@ generated: 2026-02-08
 | Category | Amount | % of Total | vs Last Week |
 |----------|--------|------------|--------------|
 | 🛍️ Shopping | ¥2199.00 | 63% | ↑100% |
-| 🍲 Food | ¥1003.00 | 29% | ↑100% |
+| 🍲 Food | ¥870.00 | 25% | ↑100% |
 | 🏋️ Health | ¥299.00 | 9% | ↑100% |
-| 🚗 Transport | ¥35.00 | 1% | ↑100% |
+| 🚗 Transport | ¥40.00 | 1% | ↑100% |
 | 📚 Education | ¥25.00 | 1% | ↑100% |
 | 📺 Subscription | ¥50.00 | 1% | ↑100% |
 
@@ -52,7 +52,7 @@ generated: 2026-02-08
 
 ```
 Shopping      [====================                ] 63%
-Food          [=========                           ] 29%
+Food          [========                           ] 25%
 Health        [===                                 ] 9%
 Others        [=                                   ] 3%
 ```
