--- a/tests/ledger/mock-memory/2026-02-05.md
+++ b/tests/ledger/mock-memory/2026-02-05.md
@@ -37,7 +37,7 @@ Assistant: Rest well tonight...
 
 ## 20:00 - Night
 
-User: Just renewed my Netflix subscription
+User: Just renewed my Netflix subscription, 50 yuan a month
 Assistant: Any shows you're planning to watch?
 
 User: Want to catch up on that new series everyone's talking about
